@@ -61,6 +61,10 @@ struct proc {
   // For Project 3 ******************************************************
   struct file *swapFile;       		// Swap space file pointer
   struct swapp sout[MAX_TOTAL_PAGES];   // Swapped page tracker array
+
+  int totalPages;	       // Number of pages (swapped and physical) held by this process
+  int totalPhysicalPages;      // Number of pages in physical memory
+
   // ********************************************************************
 };
 
