@@ -82,7 +82,62 @@ trap(struct trapframe *tf)
 
   case T_PGFLT:
      cprintf("page fault! - %s - 0x%x", myproc()->name, rcr2());
+     // A number of things should be checked upon page fault
+     // (1) Check totalPages of the calling process
+     //	   (i) If totalPages >= MAX_TOTAL_PAGES, kill the process
+     //	(2) Check if the faulting address is swapped out
+     //    (i) If not, increment totalPages
+     // (3) Check totalPhysicalPages of the calling process
+     //    (i) If totalPhysicalPages is less than MAX_PSYC_PAGES,
+     //	       increment and allocate a new physical page
+     //    (ii) Otherwise, select a victim page and swap out
+     // (4) If the faulting address was swapped out, read it back in.
 
+     struct proc *curproc = myproc();
+     void* addr = (void*) rcr2();
+     char buf[PGSIZE];
+     pte_t *fpage, *spage;
+     int index;
+
+     // Check totalPages and kill process if appropriate
+     if(curproc->totalPages >= MAX_TOTAL_PAGES) kill(curproc->pid);
+
+     // Retrieve PTE and determine if paged out
+     fpage = walkpgdir(curproc->pgdir, addr, 0);
+
+     // If not, increment totalPages
+     if(!(*fpage & PTE_PG)) curproc->totalPages++;
+
+     // Check if totalPhysicalPages < MAX_PSYC_PAGES
+     // If so, increment totalPhysicalPages and allocate
+     // a new physical page
+     if(curproc->totalPhysicalPages < MAX_PSYC_PAGES) {
+	curproc->totalPhysicalPages++;
+     }
+     // If not, select a victim page, write out, and update
+     else {
+	spage = get_victim(); 				 	   // Select victim page
+	memmove((void*) buf, (void*) PTE_ADDR(*spage), PGSIZE); // Get physical contents of page
+	index = add_page(addr, curproc);			   // Find available index in swap file
+	writeToSwapFile(curproc, buf, index, PGSIZE);		   // Write physical memory contents to swap file
+	
+	// Mark victim's PTE as not present and paged out
+	*spage &= ~PTE_P;
+	*spage |= PTE_PG;
+
+	// Call mappages()
+	mappages(curproc->pgdir, addr, PGSIZE, PTE_ADDR(*spage), 0);
+
+	// Check if the faulted address was swapped out
+	// If so, read in from swap file.
+	if(*fpage & PTE_PG) {
+	   index = remove_page(addr, curproc);
+	   readFromSwapFile(curproc, buf, index, PGSIZE);
+	   memmove((void*) PTE_ADDR(*fpage), (void*) buf, PGSIZE);
+	}
+     }
+
+     break;
   // ********************************************************************
 
   //PAGEBREAK: 13
