@@ -32,7 +32,7 @@ seginit(void)
 // Return the address of the PTE in page table pgdir
 // that corresponds to virtual address va.  If alloc!=0,
 // create any required page table pages.
-static pte_t *
+pte_t *
 walkpgdir(pde_t *pgdir, const void *va, int alloc)
 {
   pde_t *pde;
@@ -57,7 +57,7 @@ walkpgdir(pde_t *pgdir, const void *va, int alloc)
 // Create PTEs for virtual addresses starting at va that refer to
 // physical addresses starting at pa. va and size might not
 // be page-aligned.
-static int
+int
 mappages(pde_t *pgdir, void *va, uint size, uint pa, int perm)
 {
   char *a, *last;
@@ -384,6 +384,11 @@ copyout(pde_t *pgdir, uint va, void *p, uint len)
 }
 
 // For Project 3 ********************************************************
+
+pte_t* get_victim() {
+   return (pte_t*) 0;
+}
+
 
 // Find the user PTE for the given virtual address and check if its
 // PTE_PG flag is set.
